# gstreamer-rockchip

./: configure.ac
gst/rockchipmpp/: Makefile.am  gstmpp.c  gstmppallocator.c  gstmppallocator.h  gstmppbufferpool.c  gstmppbufferpool.h  gstmppdecbufferpool.c  gstmppdecbufferpool.h  gstmppjpegdec.c  gstmppobject.c  gstmppobject.h  gstmppvideodec.c  gstmppvideodec.h
tests/examples/app-interface/: gst-decoder-app.c
